--- a/daily.toml
+++ b/daily.toml
@@ -27,7 +27,7 @@ params = { stage = "1-7", client_type = "Official", expiring_medicine = 999 }
 [[tasks]]
 name = "基建换班"
 type = "Infrast"
-params = { mode = 0, facility = ["Mfg", "Trade", "Control", "Power", "Reception", "Office", "Dorm"], drones = "Money", threshold = 0.3, replenish = true, dorm_notstationed_enabled = true }
+params = { mode = 0, facility = ["Dorm", "Office", "Mfg", "Trade", "Control", "Power", "Reception"], drones = "Money", threshold = 0.3, replenish = true, dorm_notstationed_enabled = true }
 
 [[tasks]]
 name = "信用商店"
