--- a/default.toml
+++ b/default.toml
@@ -2,5 +2,5 @@
 address = "127.0.0.1:5555"
 
 [instance_options]
-touch_mode = "ADB"
-kill_adb_on_exit = false
+touch_mode = "MaaTouch"
+adb_lite_enabled = true
