--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     tty: true
     privileged: true
     volumes:
-      - ~/data:/data
+      - ./data:/data
     ports:
       - 5555:5555
     command:
@@ -19,10 +19,6 @@ services:
       - ro.ril.miui.imei0=865948069902281
       - ro.product.manufacturer=Xiaomi
       - ro.build.product=zeus
-      - ro.product.cpu.abi=x86_64
-      - ro.product.cpu.abilist=x86_64,x86
-      - ro.product.cpu.abilist32=x86
-      - ro.product.cpu.abilist64=x86_64
       - ro.config.low_ram=true
     container_name: redroid
     image: ${IMAGETAG:-redroid/redroid:11.0.0-latest}
