--- a/.config/maa/tasks/daily.toml
+++ b/.config/maa/tasks/daily.toml
@@ -25,18 +25,9 @@ type = "Fight"
 params = { stage = "1-7", client_type = "Official", expiring_medicine = 999 }
 
 [[tasks]]
-name = "关闭游戏"
-type = "CloseDown"
-
-[[tasks]]
-name = "开始唤醒"
-type = "StartUp"
-params = { client_type = "Official", start_game_enabled = true }
-
-[[tasks]]
 name = "基建换班"
 type = "Infrast"
-params = { mode = 0, facility = ["Dorm", "Office", "Mfg", "Trade", "Control", "Power", "Reception"], drones = "Money", threshold = 0.3, replenish = true, dorm_notstationed_enabled = true }
+params = { mode = 0, facility = ["Office", "Mfg", "Trade", "Control", "Power", "Reception", "Dorm"], drones = "Money", threshold = 0.3, replenish = true, dorm_notstationed_enabled = true }
 
 [[tasks]]
 name = "信用商店"
