--- a/.github/workflows/maa.yml
+++ b/.github/workflows/maa.yml
@@ -42,7 +42,6 @@ jobs:
       - name: Restore container
         if: github.event.inputs.manual_update != 'true'
         uses: actions/cache/restore@v4
-        id: container-restore
         with:
           path: |
             ./ark.tar
@@ -50,7 +49,7 @@ jobs:
           key: redroid-
 
       - name: Setup Debug Session
-        if: github.event.inputs.manual_update == 'true' || steps.container-restore.outputs.cache-hit != 'true'
+        if: github.event.inputs.manual_update == 'true' 
         uses: mxschmitt/action-tmate@v3
         with:
           detached: true
